# strappy-di

./: README.md  hello.py  pyproject.toml  requirements.txt
.github/workflows/: check-source.yml  github-actions-demo.yml
src/strappy/: __init__.py  container.py  protocols.py  provider.py  strategies.py  type_utils.py  types.py
src/strappy_di.egg-info/: PKG-INFO  SOURCES.txt
strappy_di.egg-info/: PKG-INFO  SOURCES.txt
tests/e2e/: test_complex_situation.py
tests/unit/: test_calling_logic.py  test_extend.py  test_fastapi_integration.py  test_global.py  test_register.py  test_resolve.py  test_scope.py
