[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strappy-di"
version = "0.1.0"
description = "Light, flexible, and pythonic dependency injection framework"
readme = "README.md"
authors = [{ name = "Caroline Matson", email = "carlymatson21@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dependency", "injection", "bootstrap"]
dependencies = []
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/carlymatson/strappy-di"

[tool.uv]
dev-dependencies = ["fastapi>=0.115.4", "pytest>=8.3.2"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "PLR0913", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101", "PLR2004"]
